Corrected mobile column-gap and contact date format

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,24 +1,24 @@
 @mixin grid-container() {
   display: grid;
   grid-template-columns: repeat(12, minmax(auto, 4rem));
-  gap: 2rem;
+  column-gap: 2rem;
   width: 100%;
   justify-content: center;
 
   @media (max-width: $desktop) {
     grid-template-columns: repeat(12, minmax(auto, 3.5rem));
-    gap: 1.5rem;
+    column-gap: 1.5rem;
   }
 
   @media (max-width: $tablet) {
     grid-template-columns: repeat(6, minmax(auto, 5rem));
-    gap: 2rem;
+    column-gap: 2rem;
   }
 
   @media (max-width: $mobile) {
     grid-template-columns: minmax(auto, 1fr);
     padding: 0 1.5rem;
-    gap: 0;
+    column-gap: 0;
   }
 }
 
